@@ -32,6 +32,7 @@ https://github.com/elastic/beats/compare/v5.1.2...5.1[Check the HEAD diff]
 *Packetbeat*
 
 *Filebeat*
+- Fix registry migration issue from old states were files were only harvested after second restart. {pull}3322[3322]
 
 *Winlogbeat*
 
